--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,4 @@
-.imagebackgrand{
-    width: 100%;
-    height: 700px;
-}
+
 .parent{
     /* margin: 60px; */
     padding: 60px;
@@ -17,4 +14,32 @@
 .logoaps{
     height: 50px;
     width: 50px;
+}
+.parentP{
+    padding-top: 70px;
+}
+.cantaner{
+    display: flex;
+    /* height:auto; */
+    justify-content:center;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 15px;
+    padding: 20px; 
+    /* background-color: aqua; */
+
+}
+.parentimageplants{
+/* padding: 30px; */
+    /* display: flex; */
+    /* justify-content: center; */
+    /* gap: 15px ; */
+
+}
+.imageplants{
+    height: 150px;
+    width: 150px;
 }
